[package]
name = "sysinfo-osc-client-vrc"
homepage = "https://github.com/Shimogawa/sysinfo-osc-client-vrc"
authors = ["Rebuild"]
description = "An OSC client that sends system information most likely to VRChat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.10"
sysinfo = "0.30"
bytesize = "1.2"
nvml-wrapper = "0.10"
ctrlc = "3.4"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
once_cell = "1.19.0"
